feat: adapta projeto para LP2 (JavaFX, persistência em arquivo, coleções Java)
- Interface gráfica JavaFX (HotelApp) com abas de quartos, hóspedes e reservas
- Persistência em arquivo por serialização (salva ao fechar, carrega ao abrir)
- Usa coleções do java.util; remove estruturas manuais (ficaram na branch de ED)
- Projeto Maven com javafx-maven-plugin
- README reescrito com guia completo de uso e JavaFX